--- a/src/main/resources/templates/GetAll.html
+++ b/src/main/resources/templates/GetAll.html
@@ -7,11 +7,13 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
     <link rel="stylesheet" th:href="@{/css/getAll.css}">
 </head>
 
-<body class="gradient-custom">
+<body class="gradient-custom" th:data-success="${success}" th:data-error="${error}">
 
 <div class="container mt-4">
 
@@ -65,7 +67,7 @@
 
 
                                 onclick="cargarUsuario(this)">
-                            Editar
+                                <i class="bi bi-pencil-square"></i>
                         </button>
 
                         <button class="btn btn-danger btn-sm">
@@ -139,20 +141,36 @@
                                 <br>
 
                                 <span>
+                                    <span th:text="${direccion.colonia.municipio.IdMunicipio}"></span>,
                                     <span th:text="${direccion.colonia.municipio.nombre}"></span>,
+                                    <span th:text="${direccion.colonia.municipio.estado.IdEstado}"></span>,
                                     <span th:text="${direccion.colonia.municipio.estado.nombre}"></span>,
                                     <span th:text="${direccion.colonia.municipio.estado.pais.nombre}"></span>
                                 </span>
 
                                 <div class="mt-2 text-end">
 
-                                    
+                                  <button type="button"
+                                          class="btn btn-warning btn-sm btnEditarDireccion"
+                                          data-bs-toggle="modal" 
+                                          data-bs-target="#modalEditarDireccion"
+                                          th:data-id="${direccion.IdDireccion}"
+                                          th:data-idusuario="${usuario.idUsuario}"
+                                          th:data-calle="${direccion.calle}"
+                                          th:data-noext="${direccion.numeroExterior}"
+                                          th:data-noint="${direccion.numeroIInteriori}"
+                                          th:data-cp="${direccion.Colonia.codigoPostal}"
+                                          th:data-idpais="${direccion.colonia.municipio.estado.pais.idPais}"
+                                          th:data-idestado="${direccion.colonia.municipio.estado.IdEstado}"
+                                          th:data-idmunicipio="${direccion.colonia.municipio.IdMunicipio}"
+                                          th:data-idcolonia="${direccion.colonia.IdColonia}"
+                                          >
+                                      <i class="bi bi-pencil-square"></i>
+                                  </button>
 
-
-
-                                    <button class="btn btn-danger btn-sm">
-                                        <i class="bi bi-trash"></i>
-                                    </button>
+                                  <button class="btn btn-danger btn-sm">
+                                      <i class="bi bi-trash"></i>
+                                  </button>
 
 
                                 </div>
@@ -176,7 +194,7 @@
 
       <form th:action="@{/Usuario/update}" method="post">
 
-        <div class="modal-header">
+        <div class="modal-header bg-warning">
           <h5 class="modal-title">Editar Usuario</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
         </div>
@@ -231,15 +249,17 @@
             </div>
 
             <div class="col-md-6">
-                <label class="fw-bold">Rol</label>
-                <select class="form-control" id="rol" name="rol.idRol">
-                    <option value="">-- Seleccione un rol --</option>
-                    <option th:each="rol : ${roles}"
-                            th:value="${rol.idRol}"
-                            th:text="${rol.nombreRol}">
-                    </option>
-                </select>
-            </div>
+              <label class="fw-bold">Rol</label>
+              <select class="form-control" id="rol" name="rol.idRol">
+                  <option value="">-- Seleccione un rol --</option>
+
+                  <option th:each="rol : ${roles}"
+                          th:value="${rol.IdRol}"
+                          th:text="${rol.NombreRol}">
+                  </option>
+              </select>
+          </div>
+
 
 
             <div class="col-md-6">
@@ -312,29 +332,38 @@
               <input type="text" class="form-control" name="numeroIInteriori" id="direccionNoInt">
             </div>
 
-            <div class="col-md-6">
-              <label class="form-label">Colonia</label>
-              <input type="text" class="form-control" name="colonia" id="direccionColonia">
-            </div>
-
-            <div class="col-md-6">
-              <label class="form-label">Código Postal</label>
-              <input type="text" class="form-control" name="codigoPostal" id="direccionCP">
+            <div class="col-md-4">
+                <label class="form-label fw-bold">País</label>
+                <select class="form-select" name="idPais" id="direccionPais">
+                    <option value="">-- Seleccione --</option>
+                    <option th:each="p : ${paises}" th:value="${p.idPais}" th:text="${p.nombre}"></option>
+                </select>
             </div>
 
             <div class="col-md-4">
-              <label class="form-label">Municipio</label>
-              <input type="text" class="form-control" name="municipio" id="direccionMunicipio">
+                <label class="form-label fw-bold">Estado</label>
+                <select class="form-select" id="direccionEstado">
+                    <option value="">-- Seleccione --</option>
+                </select>
             </div>
 
             <div class="col-md-4">
-              <label class="form-label">Estado</label>
-              <input type="text" class="form-control" name="estado" id="direccionEstado">
+                <label class="form-label fw-bold">Municipio</label>
+                <select class="form-select" id="direccionMunicipio">
+                    <option value="">-- Seleccione --</option>
+                </select>
+            </div>
+
+            <div class="col-md-8">
+                <label class="form-label fw-bold">Colonia</label>
+                <select class="form-select" name="colonia.idColonia" id="direccionColonia">
+                    <option value="">-- Seleccione --</option>
+                </select>
             </div>
 
             <div class="col-md-4">
-              <label class="form-label">País</label>
-              <input type="text" class="form-control" name="pais" id="direccionPais">
+                <label class="form-label fw-bold">C.P.</label>
+                <input type="text" class="form-control bg-light" name="codigoPostal" id="direccionCP" readonly>
             </div>
 
           </div>
@@ -351,8 +380,8 @@
 </div>
 
 <script th:src="@{/js/Modal.js}"></script>
+<script th:src="@{/js/Alert.js}"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
-
 </html>
