--- a/src/main/resources/templates/formulario.html
+++ b/src/main/resources/templates/formulario.html
@@ -18,6 +18,12 @@
 
 <div class="container py-5">
 
+    <div class="col-sm-4">
+        <a class="btn btn-warning" th:href="@{/Usuario}">
+            <i class="bi bi-arrow-return-left"></i>
+        </a>
+    </div>
+
     <div class="row justify-content-center">
         <div class="col-lg-10 col-md-12">
 
