--- a/src/main/resources/templates/GetAll.html
+++ b/src/main/resources/templates/GetAll.html
@@ -102,11 +102,14 @@
                             </div>
 
                         </div>
-                        <div class="mt-6 text-end">
-                                <a class="btn btn-success btn-sm me-1">
-                                    <i class="bi bi-camera"></i>
-                                </a>
-                            </div>
+                        <button type="button"
+                                class="btn btn-success btn-sm me-1"
+                                data-bs-toggle="modal"
+                                data-bs-target="#modalFoto"
+                                th:data-id="${usuario.idUsuario}"
+                                onclick="cargarIdUsuarioFoto(this)">
+                            <i class="bi bi-camera"></i>
+                        </button>
                     </td>
 
                     <td class="text-start">
@@ -374,6 +377,53 @@
         </div>
 
       </form>
+    </div>
+  </div>
+</div>
+
+
+<div class="modal fade" id="modalFoto" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+
+      <form th:action="@{/Usuario/ActualizarFoto}" 
+            method="post" 
+            enctype="multipart/form-data">
+
+        <div class="modal-header bg-success text-white">
+          <h5 class="modal-title">Actualizar Foto</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+
+        <div class="modal-body text-center">
+
+          <input type="hidden" name="idUsuario" id="fotoIdUsuario">
+
+          <div class="mb-3 d-flex justify-content-center">
+                <img id="previewNuevaFoto"
+                    class="rounded-circle"
+                    style="width:150px;height:150px;object-fit:cover;display:none;">
+            </div>
+
+          <input type="file"
+                 name="archivoFoto"
+                 class="form-control"
+                 accept="image/png, image/jpeg"
+                 onchange="previewImagen(event)">
+
+        </div>
+
+        <div class="modal-footer">
+          <button type="submit" class="btn btn-success">
+              Guardar Foto
+          </button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+              Cancelar
+          </button>
+        </div>
+
+      </form>
+
     </div>
   </div>
 </div>
